--- a/asia/hello-world-app-uat-test-stage-red/platform-config.yaml
+++ b/asia/hello-world-app-uat-test-stage-red/platform-config.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: platform-config
-  namespace: dev-asia-hello-world-app-functional-test-dev-red
+  namespace: stage-asia-hello-world-app-uat-test-stage-red
 data:
   CLUSTER_NAME: Factory Cluster
   DATABASE_URL: mysql://asia-host:3306/mysqlrty123
-  ENVIRONMENT: Dev
+  ENVIRONMENT: Stage
   REGION: Asia
   SOME_COMMON_ENVIRONMENT_VARIABLE: "false"
