--- a/west-us/hello-world-app-uat-test-stage-green/platform-config.yaml
+++ b/west-us/hello-world-app-uat-test-stage-green/platform-config.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: platform-config
-  namespace: dev-west-us-hello-world-app-functional-test-dev-green
+  namespace: stage-west-us-hello-world-app-uat-test-stage-green
 data:
   CLUSTER_NAME: Factory Cluster
   DATABASE_URL: mysql://us-host:3306/mysqlrty123
-  ENVIRONMENT: Dev
+  ENVIRONMENT: Stage
   REGION: West US
   SOME_COMMON_ENVIRONMENT_VARIABLE: "false"
