--- a/eu/hello-world-app-functional-test-dev-red/reconciler.yaml
+++ b/eu/hello-world-app-functional-test-dev-red/reconciler.yaml
@@ -1,26 +1,26 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: GitRepository
 metadata:
-  name: "hello-world-app-functional-test-dev-gray-eu"
+  name: "hello-world-app-functional-test-dev-red"
   namespace: flux-system
 spec:
   interval: 30s
   url: "https://github.com/eedorenko/hello-world-gitops"
   ref:
-    branch: "dev-gray"
+    branch: "dev-red"
   secretRef:
       name: repo-secret    
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: "hello-world-app-functional-test-dev-gray-eu"
+  name: "hello-world-app-functional-test-dev-red"
   namespace: flux-system
 spec:
   interval: 30s
-  targetNamespace: "dev-eu-hello-world-app-functional-test-dev-gray-eu"
+  targetNamespace: "dev-eu-hello-world-app-functional-test-dev-red"
   sourceRef:
     kind: GitRepository
-    name: "hello-world-app-functional-test-dev-gray-eu"
-  path: "./functional-test/eu" 
+    name: "hello-world-app-functional-test-dev-red"
+  path: "./functional-test" 
   prune: true
