--- a/west-us/hello-world-app-functional-test-dev-gray-west-us/platform-config.yaml
+++ b/west-us/hello-world-app-functional-test-dev-gray-west-us/platform-config.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: platform-config
-  namespace: dev-eu-hello-world-app-functional-test-dev-gray-eu
+  namespace: dev-west-us-hello-world-app-functional-test-dev-gray-west-us
 data:
   CLUSTER_NAME: Factory Cluster
-  DATABASE_URL: mysql://eu-host:3306/mysqlrty123
+  DATABASE_URL: mysql://us-host:3306/mysqlrty123
   ENVIRONMENT: Dev
-  REGION: EU
+  REGION: West US
   SOME_COMMON_ENVIRONMENT_VARIABLE: "true"
