--- a/asia/hello-world-app-functional-test-dev-red/reconciler.yaml
+++ b/asia/hello-world-app-functional-test-dev-red/reconciler.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: GitRepository
 metadata:
-  name: "hello-world-app-functional-test-dev-red"
+  name: dev-red.kaizen-team.hello-world.hello-world-app-functional-test-dev-red.asia
   namespace: flux-system
 spec:
   interval: 30s
@@ -14,7 +14,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: "hello-world-app-functional-test-dev-red"
+  name: dev-red.kaizen-team.hello-world.hello-world-app-functional-test-dev-red.asia
   namespace: flux-system
 spec:
   interval: 30s
