--- a/east-us/hello-world-app-functional-test-dev-green/reconciler.yaml
+++ b/east-us/hello-world-app-functional-test-dev-green/reconciler.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: GitRepository
 metadata:
-  name: "hello-world-app-functional-test-dev-green"
+  name: dev-green.kaizen-team.hello-world.hello-world-app-functional-test-dev-green.east-us
   namespace: flux-system
 spec:
   interval: 30s
@@ -14,7 +14,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: "hello-world-app-functional-test-dev-green"
+  name: dev-green.kaizen-team.hello-world.hello-world-app-functional-test-dev-green.east-us
   namespace: flux-system
 spec:
   interval: 30s
