--- a/west-us/hello-world-app-functional-test-dev-green/reconciler.yaml
+++ b/west-us/hello-world-app-functional-test-dev-green/reconciler.yaml
@@ -21,6 +21,6 @@ spec:
   targetNamespace: "dev-west-us-hello-world-app-functional-test-dev-green"
   sourceRef:
     kind: GitRepository
-    name: "hello-world-app-functional-test-dev-green"
+    name: dev.kaizen-team.hello-world.hello-world-app-functional-test-dev-green.west-us
   path: "./functional-test" 
   prune: true
