--- a/asia/hello-world-app-uat-test-stage-red/reconciler.yaml
+++ b/asia/hello-world-app-uat-test-stage-red/reconciler.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: GitRepository
 metadata:
-  name: "hello-world-app-uat-test-stage-red"
+  name: stage-red.kaizen-team.hello-world.uat-test
   namespace: flux-system
 spec:
   interval: 30s
@@ -14,13 +14,13 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: "hello-world-app-uat-test-stage-red"
+  name: stage-red.kaizen-team.hello-world.uat-test
   namespace: flux-system
 spec:
   interval: 30s
   targetNamespace: "stage-asia-hello-world-app-uat-test-stage-red"
   sourceRef:
     kind: GitRepository
-    name: "hello-world-app-uat-test-stage-red"
+    name: stage-red.kaizen-team.hello-world.uat-test
   path: "./uat-test" 
   prune: true
