--- a/eu/hello-world-uat-test-stage-green/platform-config.yaml
+++ b/eu/hello-world-uat-test-stage-green/platform-config.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: platform-config
-  namespace: stage-east-us-hello-world-app-uat-test-stage-gray
+  namespace: stage-eu-hello-world-uat-test-stage-green
 data:
   CLUSTER_NAME: Factory Cluster
-  DATABASE_URL: mysql://us-host:3306/mysqlrty123
+  DATABASE_URL: mysql://eu-host:3306/mysqlrty123
   ENVIRONMENT: Stage
-  REGION: East US
+  REGION: EU
   SOME_COMMON_ENVIRONMENT_VARIABLE: "false"
