--- a/asia/hello-world-functional-test-dev-red/platform-config.yaml
+++ b/asia/hello-world-functional-test-dev-red/platform-config.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: platform-config
-  namespace: dev-eu-hello-world-app-functional-test-dev-green
+  namespace: dev-asia-hello-world-functional-test-dev-red
 data:
   CLUSTER_NAME: Factory Cluster
-  DATABASE_URL: mysql://eu-host:3306/mysqlrty123
+  DATABASE_URL: mysql://asia-host:3306/mysqlrty123
   ENVIRONMENT: Dev
-  REGION: EU
+  REGION: Asia
   SOME_COMMON_ENVIRONMENT_VARIABLE: "true"
