--- a/asia/hello-world-functional-test-dev-red/reconciler.yaml
+++ b/asia/hello-world-functional-test-dev-red/reconciler.yaml
@@ -1,26 +1,26 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: GitRepository
 metadata:
-  name: dev-gray.kaizen-team.hello-world.functional-test-west-us
+  name: dev-red.kaizen-team.hello-world.hello-world-functional-test
   namespace: flux-system
 spec:
   interval: 30s
   url: "https://github.com/eedorenko/hello-world-gitops"
   ref:
-    branch: "dev-gray"
+    branch: "dev-red"
   secretRef:
       name: repo-secret    
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: dev-gray.kaizen-team.hello-world.functional-test-west-us
+  name: dev-red.kaizen-team.hello-world.hello-world-functional-test
   namespace: flux-system
 spec:
   interval: 30s
-  targetNamespace: "dev-west-us-hello-world-app-functional-test-dev-gray-west-us"
+  targetNamespace: "dev-asia-hello-world-functional-test-dev-red"
   sourceRef:
     kind: GitRepository
-    name: dev-gray.kaizen-team.hello-world.functional-test-west-us
-  path: "./functional-test/west-us" 
+    name: dev-red.kaizen-team.hello-world.hello-world-functional-test
+  path: "./functional-test" 
   prune: true
