--- a/asia/hw-uat-test-stage-red/platform-config.yaml
+++ b/asia/hw-uat-test-stage-red/platform-config.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: platform-config
-  namespace: stage-east-us-hello-world-app-uat-test-stage-gray
+  namespace: stage-asia-hw-uat-test-stage-red
 data:
   CLUSTER_NAME: Factory Cluster
-  DATABASE_URL: mysql://us-host:3306/mysqlrty123
+  DATABASE_URL: mysql://asia-host:3306/mysqlrty123
   ENVIRONMENT: Stage
-  REGION: East US
+  REGION: Asia
   SOME_COMMON_ENVIRONMENT_VARIABLE: "false"
