--- a/west-us/hw-uat-test-stage-gray/reconciler.yaml
+++ b/west-us/hw-uat-test-stage-gray/reconciler.yaml
@@ -1,26 +1,26 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: GitRepository
 metadata:
-  name: stage-green.kaizen-team.hello-world.uat-test
+  name: stage-gray.kaizen-team.hello-world.uat-test
   namespace: flux-system
 spec:
   interval: 30s
   url: "https://github.com/eedorenko/hello-world-gitops"
   ref:
-    branch: "stage-green"
+    branch: "stage-gray"
   secretRef:
       name: repo-secret    
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: stage-green.kaizen-team.hello-world.uat-test
+  name: stage-gray.kaizen-team.hello-world.uat-test
   namespace: flux-system
 spec:
   interval: 30s
-  targetNamespace: "stage-eu-hello-world-app-uat-test-stage-green"
+  targetNamespace: "stage-west-us-hw-uat-test-stage-gray"
   sourceRef:
     kind: GitRepository
-    name: stage-green.kaizen-team.hello-world.uat-test
+    name: stage-gray.kaizen-team.hello-world.uat-test
   path: "./uat-test" 
   prune: true
