--- a/asia/hw-functional-test-dev-red/reconciler.yaml
+++ b/asia/hw-functional-test-dev-red/reconciler.yaml
@@ -1,26 +1,26 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: GitRepository
 metadata:
-  name: dev-gray.kaizen-team.hello-world.functional-test-east-us
+  name: dev-red.kaizen-team.hello-world.hw-functional-test
   namespace: flux-system
 spec:
   interval: 30s
   url: "https://github.com/eedorenko/hello-world-gitops"
   ref:
-    branch: "dev-gray"
+    branch: "dev-red"
   secretRef:
       name: repo-secret    
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: dev-gray.kaizen-team.hello-world.functional-test-east-us
+  name: dev-red.kaizen-team.hello-world.hw-functional-test
   namespace: flux-system
 spec:
   interval: 30s
-  targetNamespace: "dev-east-us-hello-world-app-functional-test-dev-gray-east-us"
+  targetNamespace: "dev-asia-hw-functional-test-dev-red"
   sourceRef:
     kind: GitRepository
-    name: dev-gray.kaizen-team.hello-world.functional-test-east-us
-  path: "./functional-test/east-us" 
+    name: dev-red.kaizen-team.hello-world.hw-functional-test
+  path: "./functional-test" 
   prune: true
