--- a/east-us/hw-functional-test-dev-gray-east-us/platform-config.yaml
+++ b/east-us/hw-functional-test-dev-gray-east-us/platform-config.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: platform-config
-  namespace: dev-asia-hello-world-app-functional-test-dev-red
+  namespace: dev-east-us-hw-functional-test-dev-gray-east-us
 data:
   CLUSTER_NAME: Factory Cluster
-  DATABASE_URL: mysql://asia-host:3306/mysqlrty123
+  DATABASE_URL: mysql://us-host:3306/mysqlrty123
   ENVIRONMENT: Dev
-  REGION: Asia
+  REGION: East US
   SOME_COMMON_ENVIRONMENT_VARIABLE: "true"
