--- a/east-us/hw-functional-test-dev-gray-east-us/reconciler.yaml
+++ b/east-us/hw-functional-test-dev-gray-east-us/reconciler.yaml
@@ -1,26 +1,26 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: GitRepository
 metadata:
-  name: dev-green.kaizen-team.hello-world.functional-test
+  name: dev-gray.kaizen-team.hello-world.hw-functional-test-east-us
   namespace: flux-system
 spec:
   interval: 30s
   url: "https://github.com/eedorenko/hello-world-gitops"
   ref:
-    branch: "dev-green"
+    branch: "dev-gray"
   secretRef:
       name: repo-secret    
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: dev-green.kaizen-team.hello-world.functional-test
+  name: dev-gray.kaizen-team.hello-world.hw-functional-test-east-us
   namespace: flux-system
 spec:
   interval: 30s
-  targetNamespace: "dev-eu-hello-world-app-functional-test-dev-green"
+  targetNamespace: "dev-east-us-hw-functional-test-dev-gray-east-us"
   sourceRef:
     kind: GitRepository
-    name: dev-green.kaizen-team.hello-world.functional-test
-  path: "./functional-test" 
+    name: dev-gray.kaizen-team.hello-world.hw-functional-test-east-us
+  path: "./functional-test/east-us" 
   prune: true
