--- a/west-us/hw-functional-test-dev-gray-west-us/reconciler.yaml
+++ b/west-us/hw-functional-test-dev-gray-west-us/reconciler.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: GitRepository
 metadata:
-  name: dev-gray.kaizen-team.hello-world.functional-test-west-us
+  name: dev-gray.kaizen-team.hello-world.hw-functional-test-west-us
   namespace: flux-system
 spec:
   interval: 30s
@@ -14,13 +14,13 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: dev-gray.kaizen-team.hello-world.functional-test-west-us
+  name: dev-gray.kaizen-team.hello-world.hw-functional-test-west-us
   namespace: flux-system
 spec:
   interval: 30s
-  targetNamespace: "dev-west-us-hello-world-app-functional-test-dev-gray-west-us"
+  targetNamespace: "dev-west-us-hw-functional-test-dev-gray-west-us"
   sourceRef:
     kind: GitRepository
-    name: dev-gray.kaizen-team.hello-world.functional-test-west-us
+    name: dev-gray.kaizen-team.hello-world.hw-functional-test-west-us
   path: "./functional-test/west-us" 
   prune: true
