--- a/west-us/hw-uat-test-stage-gray/reconciler.yaml
+++ b/west-us/hw-uat-test-stage-gray/reconciler.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: GitRepository
 metadata:
-  name: stage-gray.kaizen-team.hello-world.uat-test
+  name: stage-gray.kaizen-team.hello-world.hw-uat-test
   namespace: flux-system
 spec:
   interval: 30s
@@ -14,13 +14,13 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: stage-gray.kaizen-team.hello-world.uat-test
+  name: stage-gray.kaizen-team.hello-world.hw-uat-test
   namespace: flux-system
 spec:
   interval: 30s
   targetNamespace: "stage-west-us-hw-uat-test-stage-gray"
   sourceRef:
     kind: GitRepository
-    name: stage-gray.kaizen-team.hello-world.uat-test
+    name: stage-gray.kaizen-team.hello-world.hw-uat-test
   path: "./uat-test" 
   prune: true
