--- a/west-us/hw-functional-test-dev-green/platform-config.yaml
+++ b/west-us/hw-functional-test-dev-green/platform-config.yaml
@@ -8,4 +8,4 @@ data:
   DATABASE_URL: mysql://us-host:3306/mysqlrty123
   ENVIRONMENT: Dev
   REGION: West US
-  SOME_COMMON_ENVIRONMENT_VARIABLE: "true"
+  SOME_COMMON_ENVIRONMENT_VARIABLE: "false"
