--- a/asia/ct-functional-test-dev-red/namespace.yaml
+++ b/asia/ct-functional-test-dev-red/namespace.yaml
@@ -8,3 +8,5 @@ metadata:
     workload: "ct"
     deploymentTarget: "ct-functional-test-dev-red"
     someLabel: some-value
+  annotations:
+    scheduler.alpha.kubernetes.io/node-selector: environment=dev          
