--- a/east-us/ct-functional-test-dev-gray/namespace.yaml
+++ b/east-us/ct-functional-test-dev-gray/namespace.yaml
@@ -8,3 +8,5 @@ metadata:
     workload: "ct"
     deploymentTarget: "ct-functional-test-dev-gray"
     someLabel: some-value
+  annotations:
+    scheduler.alpha.kubernetes.io/node-selector: environment=dev          
