--- a/west-us/hw-functional-test-dev-gray-west-us/namespace.yaml
+++ b/west-us/hw-functional-test-dev-gray-west-us/namespace.yaml
@@ -8,3 +8,5 @@ metadata:
     workload: "hw"
     deploymentTarget: "hw-functional-test-dev-gray-west-us"
     someLabel: some-value
+  annotations:
+    scheduler.alpha.kubernetes.io/node-selector: environment=dev          
