Kalypso Scheduler commit

--- a/east-us/ct-uat-test-stage-gray/namespace.yaml
+++ b/east-us/ct-uat-test-stage-gray/namespace.yaml
@@ -8,3 +8,5 @@ metadata:
     workload: "ct"
     deploymentTarget: "ct-uat-test-stage-gray"
     someLabel: some-value
+  annotations:
+    scheduler.alpha.kubernetes.io/node-selector: environment=stage          
