--- a/asia/hw-uat-test-stage-red/namespace.yaml
+++ b/asia/hw-uat-test-stage-red/namespace.yaml
@@ -8,3 +8,5 @@ metadata:
     workload: "hw"
     deploymentTarget: "hw-uat-test-stage-red"
     someLabel: some-value
+  annotations:
+    scheduler.alpha.kubernetes.io/node-selector: environment=stage          
