--- a/eu/hw-uat-test-stage-green/namespace.yaml
+++ b/eu/hw-uat-test-stage-green/namespace.yaml
@@ -8,3 +8,5 @@ metadata:
     workload: "hw"
     deploymentTarget: "hw-uat-test-stage-green"
     someLabel: some-value
+  annotations:
+    scheduler.alpha.kubernetes.io/node-selector: environment=stage          
