--- a/east-us/ct-functional-test-dev-green/platform-config.yaml
+++ b/east-us/ct-functional-test-dev-green/platform-config.yaml
@@ -8,4 +8,4 @@ data:
   DATABASE_URL: mysql://us-host:3306/mysqlrty123
   ENVIRONMENT: Dev
   REGION: East US
-  SOME_COMMON_ENVIRONMENT_VARIABLE: "false"
+  SOME_COMMON_ENVIRONMENT_VARIABLE: "true"
