--- a/eu/ct-functional-test-dev-green/platform-config.yaml
+++ b/eu/ct-functional-test-dev-green/platform-config.yaml
@@ -8,4 +8,4 @@ data:
   DATABASE_URL: mysql://eu-host:3306/mysqlrty123
   ENVIRONMENT: Dev
   REGION: EU
-  SOME_COMMON_ENVIRONMENT_VARIABLE: "false"
+  SOME_COMMON_ENVIRONMENT_VARIABLE: "true"
