--- a/eu/ct-functional-test-dev-red/platform-config.yaml
+++ b/eu/ct-functional-test-dev-red/platform-config.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: platform-config
-  namespace: dev-asia-hw-functional-test-dev-red
+  namespace: dev-eu-ct-functional-test-dev-red
 data:
   CLUSTER_NAME: Factory Cluster
-  DATABASE_URL: mysql://asia-host:3306/mysqlrty123
+  DATABASE_URL: mysql://eu-host:3306/mysqlrty123
   ENVIRONMENT: Dev
-  REGION: Asia
+  REGION: EU
   SOME_COMMON_ENVIRONMENT_VARIABLE: "true"
