--- a/eu/hw-functional-test-dev-red/reconciler.yaml
+++ b/eu/hw-functional-test-dev-red/reconciler.yaml
@@ -1,11 +1,11 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: GitRepository
 metadata:
-  name: dev-red.demo-team.control-tower.ct-functional-test
+  name: dev-red.kaizen-team.hello-world.hw-functional-test
   namespace: flux-system
 spec:
   interval: 30s
-  url: "https://github.com/eedorenko/control-tower-gitops"
+  url: "https://github.com/eedorenko/hello-world-gitops"
   ref:
     branch: "dev-red"
   secretRef:
@@ -14,13 +14,13 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: dev-red.demo-team.control-tower.ct-functional-test
+  name: dev-red.kaizen-team.hello-world.hw-functional-test
   namespace: flux-system
 spec:
   interval: 30s
-  targetNamespace: "dev-asia-ct-functional-test-dev-red"
+  targetNamespace: "dev-eu-hw-functional-test-dev-red"
   sourceRef:
     kind: GitRepository
-    name: dev-red.demo-team.control-tower.ct-functional-test
+    name: dev-red.kaizen-team.hello-world.hw-functional-test
   path: "./functional-test" 
   prune: true
