Kalypso Scheduler commit

--- a/east-us/tacosburritosml-dev/platform-config.yaml
+++ b/east-us/tacosburritosml-dev/platform-config.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: platform-config
-  namespace: dev-west-us-tacos-burritos-ml-dev
+  namespace: dev-east-us-tacosburritosml-dev
 data:
   CLUSTER_NAME: Factory Cluster
   DATABASE_URL: mysql://us-host:3306/mysqlrty123
   ENVIRONMENT: Dev
-  REGION: West US
+  REGION: East US
   SOME_COMMON_ENVIRONMENT_VARIABLE: "true"
