--- a/asia/hw-functional-test-dev-red/reconciler.yaml
+++ b/asia/hw-functional-test-dev-red/reconciler.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: GitRepository
 metadata:
-  name: dev-red.kaizen-team.hello-world.hw-functional-test
+  name: dev-red.kaizen-team.hello-world.hw.functional-test
   namespace: flux-system
 spec:
   interval: 30s
@@ -14,13 +14,13 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: dev-red.kaizen-team.hello-world.hw-functional-test
+  name: dev-red.kaizen-team.hello-world.hw.functional-test
   namespace: flux-system
 spec:
   interval: 30s
   targetNamespace: "dev-asia-hw-functional-test-dev-red"
   sourceRef:
     kind: GitRepository
-    name: dev-red.kaizen-team.hello-world.hw-functional-test
+    name: dev-red.kaizen-team.hello-world.hw.functional-test
   path: "./functional-test" 
   prune: true
