--- a/east-us/ct-functional-test-dev-gray/reconciler.yaml
+++ b/east-us/ct-functional-test-dev-gray/reconciler.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: GitRepository
 metadata:
-  name: dev-gray.demo-team.control-tower.ct-functional-test
+  name: dev-gray.demo-team.control-tower.ct.functional-test
   namespace: flux-system
 spec:
   interval: 30s
@@ -14,13 +14,13 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: dev-gray.demo-team.control-tower.ct-functional-test
+  name: dev-gray.demo-team.control-tower.ct.functional-test
   namespace: flux-system
 spec:
   interval: 30s
   targetNamespace: "dev-east-us-ct-functional-test-dev-gray"
   sourceRef:
     kind: GitRepository
-    name: dev-gray.demo-team.control-tower.ct-functional-test
+    name: dev-gray.demo-team.control-tower.ct.functional-test
   path: "./functional-test" 
   prune: true
