--- a/east-us/hw-functional-test-dev-gray-east-us/reconciler.yaml
+++ b/east-us/hw-functional-test-dev-gray-east-us/reconciler.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: GitRepository
 metadata:
-  name: dev-gray.kaizen-team.hello-world.hw-functional-test-east-us
+  name: dev-gray.kaizen-team.hello-world.hw.functional-test-east-us
   namespace: flux-system
 spec:
   interval: 30s
@@ -14,13 +14,13 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: dev-gray.kaizen-team.hello-world.hw-functional-test-east-us
+  name: dev-gray.kaizen-team.hello-world.hw.functional-test-east-us
   namespace: flux-system
 spec:
   interval: 30s
   targetNamespace: "dev-east-us-hw-functional-test-dev-gray-east-us"
   sourceRef:
     kind: GitRepository
-    name: dev-gray.kaizen-team.hello-world.hw-functional-test-east-us
+    name: dev-gray.kaizen-team.hello-world.hw.functional-test-east-us
   path: "./functional-test/east-us" 
   prune: true
