--- a/east-us/tacosburritosml-dev/reconciler.yaml
+++ b/east-us/tacosburritosml-dev/reconciler.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: GitRepository
 metadata:
-  name: dev.demo-team.dm.tacosburritosml-dev-functional-test
+  name: dev.demo-team.dm.tacosburritosml.dev-functional-test
   namespace: flux-system
 spec:
   interval: 30s
@@ -14,13 +14,13 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: dev.demo-team.dm.tacosburritosml-dev-functional-test
+  name: dev.demo-team.dm.tacosburritosml.dev-functional-test
   namespace: flux-system
 spec:
   interval: 30s
   targetNamespace: "dev-east-us-tacosburritosml-dev"
   sourceRef:
     kind: GitRepository
-    name: dev.demo-team.dm.tacosburritosml-dev-functional-test
+    name: dev.demo-team.dm.tacosburritosml.dev-functional-test
   path: "./tacos-burritos-ml" 
   prune: true
