--- a/east-us/tacos-burritos-ml-dev1/namespace.yaml
+++ b/east-us/tacos-burritos-ml-dev1/namespace.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: "dev-west-us-tacos-burritos-ml-dev" 
+  name: "dev-east-us-tacos-burritos-ml-dev1" 
   labels:
     environment: "dev"
     workspace: "demo-team"
     workload: "tacos-burritos-ml"
-    deploymentTarget: "tacos-burritos-ml-dev"
+    deploymentTarget: "tacos-burritos-ml-dev1"
     someLabel: some-value
   annotations:
     scheduler.alpha.kubernetes.io/node-selector: environment=dev          
