--- a/asia/hw-stage-red/namespace.yaml
+++ b/asia/hw-stage-red/namespace.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: "stage-eu-hw-uat-test-stage-green" 
+  name: "stage-asia-hw-stage-red" 
   labels:
     environment: "stage"
     workspace: "kaizen-team"
     workload: "hw"
-    deploymentTarget: "hw-uat-test-stage-green"
+    deploymentTarget: "hw-stage-red"
     someLabel: some-value
   annotations:
     scheduler.alpha.kubernetes.io/node-selector: environment=stage          
