--- a/asia/hw-stage-red/reconciler.yaml
+++ b/asia/hw-stage-red/reconciler.yaml
@@ -18,7 +18,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 30s
-  targetNamespace: "stage-asia-hw-uat-test-stage-red"
+  targetNamespace: "stage-asia-hw-stage-red"
   sourceRef:
     kind: GitRepository
     name: stage-red.kaizen-team.hello-world.hw-uat-test
