--- a/asia/hw-dev-red/namespace.yaml
+++ b/asia/hw-dev-red/namespace.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: "dev-east-us-ct-functional-test-dev-green" 
+  name: "dev-asia-hw-dev-red" 
   labels:
     environment: "dev"
-    workspace: "demo-team"
-    workload: "ct"
-    deploymentTarget: "ct-functional-test-dev-green"
+    workspace: "kaizen-team"
+    workload: "hw"
+    deploymentTarget: "hw-dev-red"
     someLabel: some-value
   annotations:
     scheduler.alpha.kubernetes.io/node-selector: environment=dev          
