--- a/asia/hw-dev-red/platform-config.yaml
+++ b/asia/hw-dev-red/platform-config.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: platform-config
-  namespace: dev-east-us-ct-functional-test-dev-green
+  namespace: dev-asia-hw-dev-red
 data:
   CLUSTER_NAME: Factory Cluster
-  DATABASE_URL: mysql://us-host:3306/mysqlrty123
+  DATABASE_URL: mysql://asia-host:3306/mysqlrty123
   ENVIRONMENT: Dev
-  REGION: East US
+  REGION: Asia
   SOME_COMMON_ENVIRONMENT_VARIABLE: "true"
