--- a/eu/hw-dev-green/platform-config.yaml
+++ b/eu/hw-dev-green/platform-config.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: platform-config
-  namespace: dev-eu-hw-functional-test-dev-green
+  namespace: dev-eu-hw-dev-green
 data:
   CLUSTER_NAME: Factory Cluster
   DATABASE_URL: mysql://eu-host:3306/mysqlrty123
