--- a/west-us/hw-dev-gray/reconciler.yaml
+++ b/west-us/hw-dev-gray/reconciler.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: GitRepository
 metadata:
-  name: dev-gray.kaizen-team.hello-world.hw.hw-functional-test-dev-gray
+  name: dev-gray.kaizen-team.hello-world.hw.hw-dev-gray
   namespace: flux-system
 spec:
   interval: 30s
@@ -14,13 +14,13 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: dev-gray.kaizen-team.hello-world.hw.hw-functional-test-dev-gray
+  name: dev-gray.kaizen-team.hello-world.hw.hw-dev-gray
   namespace: flux-system
 spec:
   interval: 30s
-  targetNamespace: "dev-east-us-hw-functional-test-dev-gray"
+  targetNamespace: "dev-west-us-hw-dev-gray"
   sourceRef:
     kind: GitRepository
-    name: dev-gray.kaizen-team.hello-world.hw.hw-functional-test-dev-gray
+    name: dev-gray.kaizen-team.hello-world.hw.hw-dev-gray
   path: "./functional-test" 
   prune: true
