--- a/eu/hw-dev-green/reconciler.yaml
+++ b/eu/hw-dev-green/reconciler.yaml
@@ -22,5 +22,5 @@ spec:
   sourceRef:
     kind: GitRepository
     name: dev-green.kaizen-team.hello-world.hw.hw-dev-green
-  path: "./functional-test" 
+  path: "./hw" 
   prune: true
