--- a/asia/hw-stage-red/reconciler.yaml
+++ b/asia/hw-stage-red/reconciler.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: GitRepository
 metadata:
-  name: stage-red.kaizen-team.hello-world.hw-uat-test
+  name: stage-red.kaizen-team.hello-world.hw.hw-stage-red
   namespace: flux-system
 spec:
   interval: 30s
@@ -14,13 +14,13 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: stage-red.kaizen-team.hello-world.hw-uat-test
+  name: stage-red.kaizen-team.hello-world.hw.hw-stage-red
   namespace: flux-system
 spec:
   interval: 30s
   targetNamespace: "stage-asia-hw-stage-red"
   sourceRef:
     kind: GitRepository
-    name: stage-red.kaizen-team.hello-world.hw-uat-test
+    name: stage-red.kaizen-team.hello-world.hw.hw-stage-red
   path: "./hw" 
   prune: true
