--- a/eu/hw-stage-green/reconciler.yaml
+++ b/eu/hw-stage-green/reconciler.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: GitRepository
 metadata:
-  name: stage-green.kaizen-team.hello-world.hw-uat-test
+  name: stage-green.kaizen-team.hello-world.hw.hw-stage-green
   namespace: flux-system
 spec:
   interval: 30s
@@ -14,13 +14,13 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: stage-green.kaizen-team.hello-world.hw-uat-test
+  name: stage-green.kaizen-team.hello-world.hw.hw-stage-green
   namespace: flux-system
 spec:
   interval: 30s
   targetNamespace: "stage-eu-hw-stage-green"
   sourceRef:
     kind: GitRepository
-    name: stage-green.kaizen-team.hello-world.hw-uat-test
+    name: stage-green.kaizen-team.hello-world.hw.hw-stage-green
   path: "./hw" 
   prune: true
